Polishing the wording

--- a/fits.qmd
+++ b/fits.qmd
@@ -54,16 +54,15 @@ tar_load(c(austa))
 
 # Introduction
 
-Time series forecasting models use historical data to estimate future values [@fildes2008forecasting] based on consistent patterns observed in the past. However, time series are sometimes disrupted by unusual events that jeopardise the regularity of the time series pattern. This can be defined as an *interrupted time series*. Time series data may be disrupted by a variety of reasons, ranging from temporary policy changes to natural disasters. Outbreaks, epidemics, and pandemics, for example, may have a considerable impact on population behavior, causing discrepancies and interruptions of data in a variety of industries such as healthcare, pharmaceuticals, transportation, retail, tourism, and traffic management. Similarly, supply chain disruptions induced by factors like strikes or shortages cause irregularities in sales, inventory levels, production, and delivery, often resulting in data gaps. Transportation-related data may be interrupted due to equipment failures, such as malfunctions or breakdowns in vehicles, aircraft, or rail systems, resulting in missing or inaccurate data points. Furthermore, cybersecurity breaches data quality by possibly skewing readings in datasets relating to financial transactions, network traffic, and user activity, complicating time series analysis.
-
+Time series forecasting models use historical data to estimate future values [@fildes2008forecasting] based on consistent patterns observed in the past. However, time series are sometimes disrupted by unusual events that jeopardise the regularity of the time series pattern. This can be defined as an *interrupted time series*. Time series data may be disrupted by a variety of reasons, ranging from temporary policy changes to natural disasters. Outbreaks, epidemics, and pandemics, for example, may have a considerable impact on population behavior, causing discrepancies and interruptions of data in a variety of industries such as healthcare, pharmaceuticals, transportation, retail, tourism, and traffic management. Similarly, supply chain disruptions induced by factors such as strikes or shortages cause irregularities in sales, inventory levels, production, and delivery, often resulting in data gaps. Transportation-related data may be interrupted due to equipment failures, such as malfunctions or breakdowns in vehicles, aircraft, or rail systems, resulting in missing or inaccurate data points. Furthermore, cybersecurity breaches data quality by possibly skewing readings in datasets relating to financial transactions, network traffic, and user activity, complicating time series analysis.
 
 The disruptions may result in relatively simple changes in the series; for example a level shift at the start of the disruption, and another at the end of the disruption. Or they may be more complex, with changes to the seasonal patterns, and changes to the level, which evolve over time.
 
 The presence of such disrupted events poses a significant challenge to time series forecasting approaches, restricting their ability to reliably capture systematic information and forecast future values. The implications of these temporal interruptions are far-reaching: time series forecasting techniques, which are a key component of the forecaster's toolbox, may no longer be viable options since time series models usually assume that the data will evolve in the future in a similar way to how it has evolved in the past. But a big event (such as COVID-19) can result in a future that is different from the past, at least in the short term. Therefore, practitioners face a critical question: how to effectively forecast time series data that are impacted by such disruptive events? Many forecasters have faced this issue recently with the COVID-19 pandemic, where historical patterns have been severely disrupted due to policy interventions, lockdowns, and other restrictions. This study is motivated by numerous conversations with academics and practitioners, which demonstrate widespread concern about dealing with data affected by events like the COVID-19 pandemic. In this paper, we consider a range of models that can be used to forecast time series influenced by disrupted events, and compare their performance on some real data sets.
 
-It is important to note that in this study, we consider the problem of forecasting interrupted time series both during and after the event. This is a separate problem from change point detection [@truong2020selective] and anomaly detection [@talagala2020anomaly]. In the situations we investigate, we know that a change has occurred that causes unusual data points and want to forecast what will happen next. Change point detection refers to determining *when* a change occurred [@blazquez2021review], and anomaly detection aims to identify unusual observations with the intention of either minimising their value, or paying particular attention to them, and doing a root-cause investigation. Our study focus is also slightly differs from *intervention modeling*, also refereed to as *interrupted time series analysis and modelling* [@mcdowall2019interrupted], which is used when we have data about an outcome over time and the aim is to assess the impact of an intervention, policy, or program adopted for the whole population at a specific time point. This is a special case of what we are looking at at this paper.
+It is important to note that in this study, we consider the problem of forecasting interrupted time series both during and after the event. This is a separate problem from change point detection [@truong2020selective] and anomaly detection [@talagala2020anomaly]. In the situations we investigate, we know that a change has occurred which has caused some unusual observations, and we want to forecast what will happen next. Change point detection refers to determining *when* a change occurred [@blazquez2021review], and anomaly detection aims to identify unusual observations with the intention of either minimising their value, or paying particular attention to them, and doing a root-cause investigation. Our study focus also differs from *intervention modeling*, sometimes referred to as *interrupted time series analysis and modelling* [@mcdowall2019interrupted], which is used when we have data about an outcome over time and the aim is to assess the impact of an intervention, policy, or program implemented at a specific time point. We are not trying to measure the impact of the interruption; rather we are trying to produce sensible forecasts during and after the interruption.
 
-To our knowledge, this is the first study to offer strategies for forecasting interrupted time series, such as COVID-19 affected data. The study proposes and evaluates multiple forecasting strategies designed to handle interruptions in time series forecasting caused by disruptive events. These approaches include a range of models capable of capturing different types of changes, from simple level shifts to more complex alterations in seasonal patterns and trends. By comparing the performance of these models on two real data sets affected by COVID-19 pandemic, the paper offers valuable insights into the effectiveness and practical implications of each approach.The paper offers practical guidance for practitioners seeking to improve the accuracy and reliability of time series forecasts in the presence of disruptive events. By discussing the advantages and disadvantages of each strategy and providing recommendations based on the findings, the paper equips practitioners with actionable insights for addressing the challenges associated with forecasting during and after disruptive events. Furthermore, by adhering to reproducibility principles and providing both data and R codes for the forecasting models, the research not only contributes to transparency but also promotes the generalizability of the suggested strategies to a variety of domains. This openness allows for the replication of results, ensuring the reliability of findings, and enhancing the accessibility and utility of study outputs for the larger research community.
+To our knowledge, this is the first study to describe and compare general strategies for forecasting interrupted time series, such as COVID-19 affected data. The study proposes and evaluates multiple forecasting strategies designed to handle interruptions in time series forecasting caused by disruptive events. These approaches include a range of models capable of capturing different types of changes, from simple level shifts to more complex alterations in seasonal patterns and trends. By comparing the performance of these models on two real data sets affected by the COVID-19 pandemic, the paper offers valuable insights into the effectiveness and practical implications of each approach. By discussing the advantages and disadvantages of each strategy, and providing recommendations based on the findings, the paper equips practitioners with actionable insights for addressing the challenges associated with forecasting during and after disruptive events. Further, by adhering to reproducibility principles and providing both data and R code for the forecasting models, the research contributes to transparency and promotes the generalizability of the suggested strategies to a variety of domains. This openness allows for the replication of results, ensuring the reliability of findings, and enhancing the accessibility and utility of study outputs for the larger research community.
 
 We introduce several strategies to handling interruptions when forecasting in @sec-methods. We then apply these approaches to two real data sets in @sec-sec-examples. Finally, in @sec-conclusions, we discuss some of the advantages and disadvantages of each approach, and provide some recommendations for practitioners.
 
@@ -71,13 +70,11 @@ We introduce several strategies to handling interruptions when forecasting in @s
 
 The presence of unusual observations in time series analysis is a significant concern that has received attention in numerous studies. In this section, we provide a brief overview of some of these relevant publications.
 
-One modelling approach that has gained popularity is the intervention model, also known as interrupted time series (ITS) modelling, introduced @box1975intervention. This approach focuses on understanding how and whether outcomes change following the implementation of an intervention, policy, or programme at a specific time point. ITS models provide a robust tool for analysing policy and programme evaluation across diverse domains [@bernal2017interrupted;@mcdowall2019interrupted]. These models can forecast future values by developing models that incorporate a range of components, such as pre-intervention levels, trends, seasonality, covariates related to the intervention time, and other external factors that might affect the outcome variable. Another related approach is the multiple regimes model, which is particularly useful in forecasting due to its ability to capture structural changes and transitions observed in interrupted time series data [@Koopg2007].
-
-Statistical models developed to detect changes in time series data and handle unusual observations have also proven beneficial in similar circumstances. Methods for detecting changing points in time series data may include simple location shift and scale shift models[@aue2013structural], Bayesian [@barry1993bayesian], and supervised and supervised machine learning [@aminikhanghahi2017survey]. Anomaly detection seeks to find points or subsequences in time series data that have unexpected or anomalous values. Facebook's Prophet is an example of a time series forecasting system that uses changepoint detection and automatically adjusts model parameters to catch the most recent trends in a time series.
+One modelling approach that has gained popularity is the intervention model, also known as interrupted time series (ITS) modelling, introduced by @box1975intervention. This approach focuses on understanding how and whether outcomes change following the implementation of an intervention, policy, or programme at a specific time point. ITS models provide a robust tool for analysing policy and programme evaluation across diverse domains [@bernal2017interrupted;@mcdowall2019interrupted]. These models can forecast future values by developing models that incorporate a range of components, such as pre-intervention levels, trends, seasonality, covariates related to the intervention time, and other external factors that might affect the outcome variable. A related approach is the multiple regimes model, which is particularly useful in forecasting due to its ability to capture structural changes and transitions observed in interrupted time series data [@Koopg2007].
 
 There are also statistical models that are used to detect changes in the time series data and that can model unusual observation and have proven effective in similar situations. A range of methods such as simple location shift and scale shift models [@aue2013structural], Bayesian [@barry1993bayesian], and supervised and supervised machine learning [@aminikhanghahi2017survey]. Facebook’s Prophet [@taylor2018forecasting] is an example of a time series forecasting method that can incorporate changepoint detection (automatically or manually), and adjust model parameters to capture the newest trends in a time series. Anomaly detection is another related area in time series analysis. In the context of anomaly detection, time series anomalies are defined as points or subsequences with unexpected or abnormal values, and the detection goal is to identify such anomalies [@blazquez2021review].
 
-In the context of forecasting disruptions like the COVID-19 pandemic, Bayesian approaches have been proposed for detecting changing points in outbreaks and forecasting case numbers under counterfactual scenarios [@dehning2020inferring]. Counterfactual analysis examines what would have happened to the forecast variable of interest if the disruptive event had not occurred. In line with this, @athanasopoulos2023probabilistic proposed a variant of this approach for forecasting tourism recovery from COVID-19, combining forecast reconciliation and forecast combinations applied to historical data to generate robust COVID-free counterfactual forecasts that set the expected future paths as if the pandemic never occurred. Comparing those estimations to produced probabilistic forecasts allowed the tourism sector to estimate the difference between scenario-based probabilistic forecasts and forecasts prepared as if the pandemic had never occurred.
+In the context of forecasting disruptions such as the COVID-19 pandemic, Bayesian approaches have been proposed for detecting changing points in outbreaks and forecasting case numbers under counterfactual scenarios [@dehning2020inferring]. Counterfactual analysis examines what would have happened to the forecast variable of interest if the disruptive event had not occurred. @athanasopoulos2023probabilistic proposed a variant of this approach for forecasting tourism recovery from COVID-19, combining forecast reconciliation and forecast combinations applied to historical data, to generate COVID-free counterfactual forecasts of what might have been if the pandemic never occurred. Then scenario-based judgemental probabilistic forecasts were compared with the counterfactual forecasts, to better understand the future recovery of the tourism sector from the pandemic.
 
 Inventory stockouts are a common cause of data interruption in the supply chain. To deal with these interruptions, a popular technique is to provide an estimate for the observation corresponding to the stock-out period as if there were no stock-outs, and then generate projections appropriately. @Bell2000 presented an adjustment strategy for stock-out periods that involves smoothing demand volatility and correcting for stockouts using predicted variance conditioned on the observed stockout. @trapero2023demand also used the Tobit Kalman filter (TKF) for models presented in a state space framework for forecasting purposes. This method can efficiently deal with trends, seasonality, and exogenous influences in censored data, as long as the forecasting model functions within a state space framework.
 
@@ -113,7 +110,7 @@ Because no information is retained during the disruption, the prediction interva
 
 A fourth solution is to estimate what might have been during the period of disruption and then use the adjusted data to fit a model. The estimates could be made using any convenient method. One approach would be to set the estimates to equal the forecasts made using only pre-interruption data. This then becomes almost equal to the previous solution, except that the prediction intervals will be narrower because the estimation uncertainty has not been taken into account. On the other hand, it is more flexible than the previous approach because models that do not handle missing values can then be used.
 
-An alternative would be to take the model estimated under the previous solution (setting the observations during the disruption to missing) and use it to estimate what might have been during the disruption. Then the model can be re-estimated using the adjusted data. Note that forecasts obtained in this way during the disruption will not be true forecasts because they will have used data from the future in computing the adjusted data during the disruption. But post-disruption forecasts will be true forecasts and should be almost the same as those obtained using the previous solution.
+An alternative would be to take the model estimated under the previous solution (setting the observations during the disruption to missing), and use it to estimate what might have been during the disruption. Then the model can be re-estimated using the adjusted data. Note that forecasts obtained in this way during the disruption will not be true forecasts because they will have used data from the future in computing the adjusted data during the disruption. But post-disruption forecasts will be true forecasts and should be almost the same as those obtained using the previous solution.
 
 ## Downweight the interruption period
 
@@ -137,8 +134,7 @@ In this section, we implement and evaluate the strategies described in @sec-meth
 
 ## Australian tourism {#sec-tourism}
 
-The Australian tourism data set is a monthly time series showing the number of short-term overseas visitors to Australia. The data [@tourismdata] are available from January 2000 to May 2023, and are shown in @fig-tourism-plot1. As the borders closed in March 2020, the number of visitors to Australia dropped to near zero and remained there until towards the end of 2021. The borders officially reopened on February 21, 2022, although it seems visitors began to arrive earlier than that.
-
+The Australian tourism data set is a monthly time series showing the number of short-term overseas visitors to Australia. The data [@tourismdata] are available from January 2000 to May 2023, and are shown in @fig-tourism-plot1. As the borders closed in March 2020, the number of visitors to Australia dropped to near zero and remained there until towards the end of 2021. The borders officially reopened on 21 February 2022, although it seems visitors began to arrive earlier than that.
 
 ```{r}
 #| label: fig-tourism-plot1
@@ -148,7 +144,6 @@ tar_read(tourism_plot1)
 ```
 
 We apply the first four solutions discussed in the previous section to these data, making 12 month forecasts at the end of each year from 2019 to 2022. We fit ETS, ARIMA, and dynamic ARIMA models to the data [@fpp3], first applying a log transformation to ensure the resulting forecasts are positive. This is possible because the observations never reach exactly zero, with the smallest number of visitors per month equal to `r min(austa$Visitors)*1000` in `r austa |> filter(Visitors == min(Visitors)) |> pull(Month) |> format("%B %Y")`. For all forecasts, we also show 90% prediction intervals.
-
 
 ```{r}
 #| label: fig-tsol1-plot
@@ -170,7 +165,6 @@ tar_read(tsol2_plot)
 
 @fig-tsol2-plot shows forecasts obtained using a dynamic regression model (i.e., a regression with ARIMA errors) using two intervention variables: a level shift from March 2022 to November 2022, and a ramp from October 2021 to November 2022. It is evident that the level shift variable has worked well, giving relatively good forecasts for 2021. However, the forecasts for 2022 are particularly poor because the ramp slope has been greatly overestimated, as it was based on only three observations (Oct -- Dec 2021). The forecasts for 2023 are much better, and the relatively large prediction intervals are appropriate given the uncertainty in the industry at the end of 2022.
 
-
 ```{r}
 #| label: fig-tsol3-plot
 #| fig-height: 8
@@ -180,7 +174,6 @@ tar_read(tsol3_plot)
 ```
 
 The third solution (@fig-tsol3-plot) involved setting the observations during the disruption period to missing and then fitting an ARIMA model to the series. Consequently, the first three years of forecasts show what might have been without the COVID-19 pandemic, based on the history to the end of 2019. The final forecasts for 2023 use the data to the end of 2019 and the two observations in November and December 2022. These are much better, but the prediction intervals are too narrow, as there hasn't been sufficient recent data.
-
 
 ```{r}
 #| label: fig-tsol4-plot
@@ -224,7 +217,7 @@ The pedestrian data set is a daily time series showing the number of pedestrians
 tar_read(walkers_plot)
 ```
 
-We have also shown the periods of lockdown due to COVID-19. In Melbourne, there were six separate lockdowns ranging from `r as.numeric(min(lockdowns$Duration))` days to `r as.numeric(max(lockdowns$Duration))` days in length. The first official lockdown period was from March 31, 2020, to `r format(min(lockdowns$End), "%d %b %Y")`, and the last lockdown was from `r format(max(lockdowns$Start), "%d %b %Y")` to `r format(max(lockdowns$End), "%d %b %Y")`. However, the first period was preceded by over a week when most people elected to stay and work at home, so we have chosen to start the first period on `r format(min(lockdowns$Start), "%d %b %Y")`, to better reflect human behaviour. Otherwise, we have used the official lockdown dates [@MelbourneLockdowns].
+We have also shown the periods of lockdown due to COVID-19. In Melbourne, there were six separate lockdowns ranging from `r as.numeric(min(lockdowns$Duration))` days to `r as.numeric(max(lockdowns$Duration))` days in length. The first official lockdown period was from 31 March 2020, to `r format(min(lockdowns$End), "%d %b %Y")`, and the last lockdown was from `r format(max(lockdowns$Start), "%d %b %Y")` to `r format(max(lockdowns$End), "%d %b %Y")`. However, the first period was preceded by over a week when most people elected to stay and work at home, so we have chosen to start the first period on `r format(min(lockdowns$Start), "%d %b %Y")`, to better reflect human behaviour. Otherwise, we have used the official lockdown dates [@MelbourneLockdowns].
 
 We evaluate the solutions discussed in @sec-methods by using time series cross-validation, with the initial training set comprising the whole of 2019, and subsequent training sets growing by 1 week at a time, to the end of 2021. The test sets are always one week long. Thus, we have evaluated the forecasts for 2020 and 2021, covering all lockdown periods and the start of the recovery period. No transformations of the data have been used. The results are shown in Figures [-@fig-walkers-plot1]--[-@fig-walkers-plot4]. Prediction intervals have not been shown to avoid cluttering the plots.
 
@@ -277,7 +270,7 @@ Finally, in @fig-walkers-ensemble-plot, we show the ensemble forecasts obtained 
 
 We have presented several approaches to forecasting in the presence of an interruption. Each has its advantages and disadvantages, and the choice of which to use will depend on the situation. In fact, we have used almost all of these approaches in our own consulting work. An intervention model is often a good solution, provided the intervention can be modelled relatively simply. However, if the intervention is complex, then a highly adaptive method is often better. The highly adaptive model is also useful when the timing of the interruption is unknown or when the post-interruption period is expected to be very different from the pre-interruption period. The missing value approach is particularly useful when only post-interruption forecasts are required and forecasts during the interruption period are not needed.
 
-We have not previously used the weighted approach in practice, and software to implement it is not currently available. However, it seems to be a good compromise between the highly adaptive model and the intervention model, and we expect it to be useful in many situations once software is available to implement it easily.
+We have not previously used the weighted approach in practice, and open-source software to implement it is not currently available. However, it seems to be a good compromise between the highly adaptive model and the intervention model, and we expect it to be useful in many situations once software is available to implement it easily.
 
 Finally, the ensemble approach is useful when there is uncertainty about which approach to use, and will often result in greater accuracy due to the power of averaging.
 
@@ -285,18 +278,18 @@ We have not discussed probabilistic forecasting in any detail in this paper, oth
 
 # Conclusion
 
-It is not uncommon for modellers to experience interruptions in time series data. Whether you're in charge of developing forecasting models or a manager who relies on forecasts to inform decisions and policies, you've undoubtedly recently faced the issue of effectively forecasting time series data influenced by the COVID-19 pandemic. While this can stand as a critical challenge for many forecasting teams, it is important to recognise that similar challenges could arise in circumstances other than COVID-19. Time series can be disrupted by various factors, such as natural disasters, policy changes, price fluctuations, definition changes, sensor failures in the IoT (Internet of Things), maintenance, and breakdowns in factories,  just to mention a few.
+It is not uncommon for modellers to experience interruptions in time series data. Both those in charge of developing forecasting models, and managers relying on forecasts to inform decisions and policies, have recently faced the issue of effectively forecasting time series data influenced by the COVID-19 pandemic. While this can stand as a critical challenge for many forecasting teams, it is important to recognise that similar challenges could arise in circumstances other than COVID-19. Time series can be disrupted by various factors, such as natural disasters, policy changes, price fluctuations, definition changes, sensor failures in the IoT (Internet of Things), maintenance, and breakdowns in factories,  just to mention a few.
 
-The aim of this study is not to compile a comprehensive list of forecasting models applicable to interrupted time series data. Rather, we intend to propose overarching strategies to address such situations, with each strategy allowing for a variety of forecasting methodologies. As we provide publicly accessible R codes, readers are encouraged to adapt the study by employing other forecasting methods tailored to their specific contexts. 
+The aim of this study is not to compile a comprehensive list of forecasting models applicable to interrupted time series data. Rather, we intend to propose overarching strategies to address such situations, with each strategy allowing for a variety of forecasting methodologies. As we provide publicly accessible R code, readers are encouraged to adapt the study by employing other forecasting methods tailored to their specific contexts.
 
-The proposed strategies to forecast interrupted time series offer various advantages and disadvantages. Highly adaptive models offer swift adjustments to interruptions with ease of implementation and speedy computation. However, this simplicity comes at the expense of wider prediction intervals and the loss of historical pattern memory, limiting their effectiveness in capturing pre-interruption dynamics. Intervention models explicitly account for disruptions, retaining past patterns, yet may yield overly narrow prediction intervals by assuming post-interruption similarity without proper calibration. Setting interrupted periods to missing values preserves data integrity but may result in inaccurate forecasts during interruptions. Estimating what might have been provides flexibility but may underestimate uncertainty. Downweighting the interruption period balances pre- and post-disruption data but may necessitate additional implementation complexity. Ensemble models combine various approaches for enhanced accuracy but may introduce challenges in interpretation. 
+The proposed strategies to forecast interrupted time series offer various advantages and disadvantages. Highly adaptive models offer swift adjustments to interruptions with ease of implementation and speedy computation. However, this simplicity comes at the expense of wider prediction intervals and the loss of historical pattern memory, limiting their effectiveness in capturing pre-interruption dynamics. Intervention models explicitly account for disruptions, retaining past patterns, yet may yield overly narrow prediction intervals by assuming post-interruption similarity without proper calibration. Setting interrupted periods to missing values preserves data integrity but may result in inaccurate forecasts during interruptions. Estimating what might have been provides flexibility but may underestimate uncertainty. Downweighting the interruption period balances pre- and post-disruption data but may necessitate additional implementation complexity. Ensemble models combine various approaches for enhanced accuracy but may introduce challenges in interpretation.
 
-When determining a suitable approach to forecasting interrupted time series, several factors should be considered. To begin, the complexity of the interruption itself is critical to approach selection. Intervention models are a suitable approach for interruptions with known features or intricate patterns since they can represent the disruption. In contrast, highly adaptable models give a simpler option for fast adaptations to interruptions without explicit modelling, which is especially useful when the time or effect of the interruption is unknown. Balancing simplicity and flexibility is critical to ensuring that the selected technique is consistent with the features of the interruption and the required forecasting accuracy. Furthermore, the width of prediction intervals should be carefully assessed to determine forecast uncertainty, particularly during and after interruptions. Finally, for greater robustness and accuracy, investigating ensemble models that integrate various forecasting methods might be beneficial.
+When determining a suitable approach to forecasting interrupted time series, several factors should be considered. To begin, the complexity of the interruption itself is critical to approach selection. Intervention models are a suitable approach for interruptions with known features since they can represent the disruption explicitly. In contrast, highly adaptable models give a simpler option for fast adaptations to interruptions without explicit modelling, which is especially useful when the time or effect of the interruption is unknown. Balancing simplicity and flexibility is critical to ensuring that the selected technique is consistent with the features of the interruption and the required forecasting accuracy. Further, the width of prediction intervals should be carefully assessed to determine forecast uncertainty, particularly during and after interruptions. Finally, for greater robustness and accuracy, investigating ensemble models that integrate various forecasting methods might be beneficial.
 
 Future research might focus on enhancing probabilistic forecasting methods that are designed specifically for interrupted time series. Large-scale empirical research evaluating the effectiveness of different strategies in real-world settings might also provide useful insights. Comparative studies that assess the accuracy, robustness, and computing efficiency of different techniques across several datasets and disruption situations can help discover the most effective approaches for a range of practical applications.
 
 # Reproducibility {.unnumbered}
 
-To enhance reproducibility and facilitate the adoption of proposed strategies, we provide the data and R codes, as well as the entire paper written in R using [Quarto](https://quarto.org/) and the targets R package [@targetsr2021]. All materials required to reproduce this paper will be accessible via a public GitHub repository once the paper is accepted for publication.
+To enhance reproducibility and facilitate the adoption of proposed strategies, we provide the data and R code, as well as the entire paper written in R using [Quarto](https://quarto.org/) and the targets package for R [@targetsr2021]. All materials required to reproduce this paper will be accessible via a public GitHub repository once the paper is accepted for publication.
 
 # References
